# deq_deck

./: CMakeLists.txt  README.md
include/: Card.h  DeqDeck.h  DeqDeck.hpp
src/: CMakeLists.txt  Card.cpp  main.cpp
tests/: CMakeLists.txt  DeqTest.cpp
